# threat-intel-backend

./: README.md  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
templates/: activities.html  devices.html  hacked.html  screenshots.html
